k8s/base/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: 713923090919.dkr.ecr.us-east-1.amazonaws.com/service-b:1.0
          ports:
            - containerPort: 8000
