k8s/base/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
